Color fix for readability

--- a/src/components/parts/Event/Event.module.css
+++ b/src/components/parts/Event/Event.module.css
@@ -81,11 +81,11 @@
 }
 
 .newyear {
-  background: linear-gradient(to bottom, #ffdd81, white);
+  background: linear-gradient(to bottom, #ecc863, white);
 }
 
 .summer {
-  background: linear-gradient(to bottom, #82eaffc9, white);
+  background: linear-gradient(to bottom, #34b8d2c9, white);
 }
 
 .pride {
